Admin PAnel and Analytics

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="styles-chat.css">
   <link rel="stylesheet" href="styles-ui-redesign.css">
   <link rel="stylesheet" href="styles-auth.css">
+  <link rel="stylesheet" href="styles-admin.css">
 </head>
 <body>
   <!-- Header: Minimal, just title and resources -->
@@ -237,6 +238,7 @@
   <script src="src/types/core.js"></script>
   <script src="src/api/auth.js"></script>
   <script src="src/api/characters.js"></script>
+  <script src="src/core/admin-utils.js"></script>
   <script src="src/ui/auth-screen.js"></script>
   <script src="src/ui/character-select.js"></script>
   <script src="src/core/world.js"></script>
@@ -283,5 +285,6 @@
   <script src="src/ui/world-map-render.js"></script>
   <script src="src/ui/faction-debug.js"></script>
   <script src="src/ui/ui-redesign.js"></script>
+  <script src="src/ui/admin-panel.js"></script>
 </body>
 </html>
