--- a/index.html
+++ b/index.html
@@ -246,6 +246,8 @@
   <script src="src/core/combat-enhanced.js"></script>
   <script src="src/core/faction-system.js"></script>
   <script src="src/core/guard-system.js"></script>
+  <script src="src/core/test-debug-system.js"></script>
+  <script src="src/core/debug-commands.js"></script>
   <script src="src/app.js"></script>
   <script src="src/game/state.js"></script>
   <script src="src/game/combat.js"></script>
