--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@
   <script src="src/core/guard-system.js"></script>
   <script src="src/core/test-debug-system.js"></script>
   <script src="src/core/debug-commands.js"></script>
+  <script src="src/core/content-loader.js"></script>
   <script src="src/app.js"></script>
   <script src="src/game/state.js"></script>
   <script src="src/game/combat.js"></script>
