--- a/index.html
+++ b/index.html
@@ -286,6 +286,8 @@
   <script src="src/ui/rendering.js"></script>
   <script src="src/ui/map-render.js"></script>
   <script src="src/ui/world-map-render.js"></script>
+  <script src="src/ui/tile-detail-panel.js"></script>
+  <script src="src/ui/nearby-list.js"></script>
   <script src="src/ui/faction-debug.js"></script>
   <script src="src/ui/ui-redesign.js"></script>
   <script src="src/ui/admin-panel.js"></script>
