--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
           <div class="target-con" id="targetCon"></div>
           <!-- Target Action Buttons -->
           <div class="target-actions">
+            <button class="target-action-btn" id="attackBtn" title="Attack target">Attack</button>
             <button class="target-action-btn" id="conBtn" title="Consider target">Con</button>
             <button class="target-action-btn" id="hailBtn" title="Hail target">Hail</button>
           </div>
@@ -195,6 +196,13 @@
       </div>
     </aside>
   </main>
+
+  <!-- Bottom: Skillbar Above Chat -->
+  <div class="skillbar-container" id="skillbarContainer">
+    <div class="skillbar" id="skillbar">
+      <!-- Skills will be populated dynamically (1-5 slots) -->
+    </div>
+  </div>
 
   <!-- Bottom: Chat Window (Collapsible) -->
   <div class="chat-window" id="chatWindow">
@@ -266,6 +274,7 @@
   <script src="src/game/guilds.js"></script>
   <script src="src/game/auction-house.js"></script>
   <script src="src/game/player-stats.js"></script>
+  <script src="src/game/health-regen.js"></script>
   <script src="src/game/achievements.js"></script>
   <script src="src/game/leaderboards.js"></script>
   <script src="src/game/skinning.js"></script>
@@ -288,6 +297,7 @@
   <script src="src/ui/world-map-render.js"></script>
   <script src="src/ui/tile-detail-panel.js"></script>
   <script src="src/ui/nearby-list.js"></script>
+  <script src="src/ui/skillbar.js"></script>
   <script src="src/ui/faction-debug.js"></script>
   <script src="src/ui/ui-redesign.js"></script>
   <script src="src/ui/admin-panel.js"></script>
