--- a/index.html
+++ b/index.html
@@ -298,6 +298,7 @@
   <script src="src/ui/tile-detail-panel.js"></script>
   <script src="src/ui/nearby-list.js"></script>
   <script src="src/ui/skillbar.js"></script>
+  <script src="src/ui/tome.js"></script>
   <script src="src/ui/faction-debug.js"></script>
   <script src="src/ui/ui-redesign.js"></script>
   <script src="src/ui/admin-panel.js"></script>
