--- a/index.html
+++ b/index.html
@@ -291,6 +291,7 @@
   <script src="src/game/movement.js"></script>
   <script src="src/game/map-entities.js"></script>
   <script src="src/game/targeting.js"></script>
+  <script src="src/game/pet-system.js"></script>
   <script src="src/ui/toast.js"></script>
   <script src="src/ui/rendering.js"></script>
   <script src="src/ui/map-render.js"></script>
@@ -298,6 +299,7 @@
   <script src="src/ui/tile-detail-panel.js"></script>
   <script src="src/ui/nearby-list.js"></script>
   <script src="src/ui/skillbar.js"></script>
+  <script src="src/ui/pet-ui.js"></script>
   <script src="src/ui/tome.js"></script>
   <script src="src/ui/faction-debug.js"></script>
   <script src="src/ui/ui-redesign.js"></script>
