--- a/index.html
+++ b/index.html
@@ -279,6 +279,8 @@
   <script src="src/game/auction-house.js"></script>
   <script src="src/game/player-stats.js"></script>
   <script src="src/game/health-regen.js"></script>
+  <script src="src/game/durability-system.js"></script>
+  <script src="src/game/repair-system.js"></script>
   <script src="src/game/achievements.js"></script>
   <script src="src/game/leaderboards.js"></script>
   <script src="src/game/skinning.js"></script>
@@ -306,6 +308,7 @@
   <script src="src/ui/pet-ui.js"></script>
   <script src="src/ui/tome.js"></script>
   <script src="src/ui/faction-debug.js"></script>
+  <script src="src/ui/equipment-ui.js"></script>
   <script src="src/ui/ui-redesign.js"></script>
   <script src="src/ui/admin-panel.js"></script>
 </body>
