--- a/index.html
+++ b/index.html
@@ -131,9 +131,7 @@
         
         <!-- Map Controls -->
         <div class="map-controls">
-          <button class="map-control-btn" id="zoomInBtn" title="Zoom In">+</button>
-          <button class="map-control-btn" id="zoomOutBtn" title="Zoom Out">-</button>
-          <button class="map-control-btn" id="centerPlayerBtn" title="Center on Player">⌂</button>
+          <button class="map-control-btn" id="mapBtn" title="View Full Map">🗺️ MAP</button>
         </div>
 
         <!-- Map Legend -->
@@ -305,6 +303,7 @@
   <script src="src/ui/tile-detail-panel.js"></script>
   <script src="src/ui/nearby-list.js"></script>
   <script src="src/ui/skillbar.js"></script>
+  <script src="src/ui/full-map-modal.js"></script>
   <script src="src/ui/pet-ui.js"></script>
   <script src="src/ui/tome.js"></script>
   <script src="src/ui/faction-debug.js"></script>
