--- a/index.html
+++ b/index.html
@@ -232,6 +232,7 @@
 
   <!-- Tooltips -->
   <div id="itemTooltip" class="tooltip tooltip--item hidden" role="tooltip" hidden></div>
+  <div id="spellTooltip" class="tooltip tooltip--spell hidden" role="tooltip" hidden></div>
 
   <!-- Backend Configuration (set these before loading scripts) -->
   <script>
