--- a/index.html
+++ b/index.html
@@ -309,6 +309,7 @@
   <script src="src/ui/tome.js"></script>
   <script src="src/ui/faction-debug.js"></script>
   <script src="src/ui/equipment-ui.js"></script>
+  <script src="src/ui/item-context-menu.js"></script>
   <script src="src/ui/ui-redesign.js"></script>
   <script src="src/ui/admin-panel.js"></script>
 </body>
