--- a/index.html
+++ b/index.html
@@ -257,6 +257,8 @@
   <script src="src/core/combat-enhanced.js"></script>
   <script src="src/core/faction-system.js"></script>
   <script src="src/core/guard-system.js"></script>
+  <script src="src/core/dot-system.js"></script>
+  <script src="src/core/pulling-system.js"></script>
   <script src="src/core/test-debug-system.js"></script>
   <script src="src/core/debug-commands.js"></script>
   <script src="src/core/content-loader.js"></script>
@@ -265,6 +267,7 @@
   <script src="src/game/combat.js"></script>
   <script src="src/game/quests.js"></script>
   <script src="src/game/leveling.js"></script>
+  <script src="src/game/p99-experience.js"></script>
   <script src="src/game/inventory.js"></script>
   <script src="src/game/crafting.js"></script>
   <script src="src/game/narrative.js"></script>
