--- a/index.html
+++ b/index.html
@@ -296,6 +296,7 @@
   <script src="src/game/trade.js"></script>
   <script src="src/game/dungeons.js"></script>
   <script src="src/game/npcs.js"></script>
+  <script src="src/game/smooth-movement.js"></script>
   <script src="src/game/movement.js"></script>
   <script src="src/game/map-entities.js"></script>
   <script src="src/game/targeting.js"></script>
