--- a/index.html
+++ b/index.html
@@ -148,30 +148,7 @@
 
     <!-- Right Panel: Target, Skills, Mini-map -->
     <aside class="game-panel game-panel--right" aria-label="Target and skills">
-      <!-- Target Panel -->
-      <div class="target-panel" id="targetPanel" role="region" aria-label="Target information" hidden>
-        <div class="target-header">
-          <h3 class="target-name" id="targetName">No Target</h3>
-          <button class="target-close" id="targetClose" aria-label="Clear target">×</button>
-        </div>
-        <div class="target-info">
-          <div class="target-level" id="targetLevel"></div>
-          <div class="target-hp-container">
-            <div class="target-hp-bar">
-              <div class="target-hp-fill" id="targetHpFill"></div>
-            </div>
-            <div class="target-hp-text" id="targetHpText"></div>
-          </div>
-          <div class="target-faction" id="targetFaction"></div>
-          <div class="target-con" id="targetCon"></div>
-          <!-- Target Action Buttons -->
-          <div class="target-actions">
-            <button class="target-action-btn" id="attackBtn" title="Attack target">Attack</button>
-            <button class="target-action-btn" id="conBtn" title="Consider target">Con</button>
-            <button class="target-action-btn" id="hailBtn" title="Hail target">Hail</button>
-          </div>
-        </div>
-      </div>
+      <!-- Target Panel (moved to floating popup, will be created dynamically) -->
 
       <!-- Quick Hotbar (Skills) -->
       <div class="hotbar-panel">
